[tests] Adjusting SR-12869 test cases for optional mismatches